--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Are You Eligible?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://your-push-network.com/your-subscription.js"></script>
+    <meta name="pushsdk" content="6d119f03b744512fb0768d27529588b3">
 
     <style>
         body {
