--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         function redirectToOffer() {
-            window.location.href = "https://lodougneshe.com/link?z=9149929&var={SOURCE_ID}&ymid={CLICK_ID}";
+            window.location.href = "https://vudachisouxouk.net/link?z=9149929&var={SOURCE_ID}&ymid={CLICK_ID}";
         }
 
         async function detectLocation() {
